2009-05-26  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Don't interpolate the message id in the debug string, because if the
	message id is a tuple, it will cause an error. Let the logging
	mechanism handle that

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Clean up import statements.

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Use tempfile to choose a temporary file instead of the handrolled
	  uniquifying process that was broken to begin with.
	  Do not use a potentially non-existing or non-writable directory
	  for saving dumps.
	  Privatize private variables.

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Clean up based on pychecker's findings.
	  This fixes an actual bug in the temporary file creation,
	  and removes chunks of either half-implemented code or
	  changed-but-not-cleaned-up code.

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/styleguide:
	  Add a note on pychecker use.

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/checks/gst010.py:
	  Remove unused import.

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Fix obviously unneeded search-and-replace of quotes introduced
	  in [7822].

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/styleguide:
	  Make Public vs Private explicit, since the API section clearly
	  mentions public and private but fails to explain what it means.

2009-05-21  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Zaheer

	* flumotion/component/feedcomponent010.py:
	Added a force flag to the try_start_pipepline to force setting
	pipeline to PLAYING.

	* flumotion/component/producers/icecast/icecast.py: